--- a/FrannHammer.WebApi/packages.config
+++ b/FrannHammer.WebApi/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net45" />
