- Deprecated support for custom response objects. - Separated Crud API services into their own files.

--- a/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
+++ b/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
@@ -47,6 +47,8 @@
     <Compile Include="IDtoProvider.cs" />
     <Compile Include="IMovementService.cs" />
     <Compile Include="IMoveService.cs" />
+    <Compile Include="IReaderService.cs" />
+    <Compile Include="IWriterService.cs" />
     <Compile Include="ParsedMove.cs" />
     <Compile Include="ParsedMoveAttribute.cs" />
     <Compile Include="ParsedMoveDataProperty.cs" />
