- Now using SolutionInfo.cs file for assembly version instead of local project AssemblyInfo.

--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -64,6 +64,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="ApiServiceFactories\ApiServiceFactory.cs" />
     <Compile Include="ApiServiceTestSetupUtility.cs" />
     <Compile Include="CharacterAttributeRowServiceTests.cs" />
