--- a/FrannHammer.DefaultContainer.Configuration/FrannHammer.DefaultContainer.Configuration.csproj
+++ b/FrannHammer.DefaultContainer.Configuration/FrannHammer.DefaultContainer.Configuration.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="ContainerModules\ApiServicesModule.cs" />
     <Compile Include="ContainerModules\DatabaseModule.cs" />
     <Compile Include="ContainerModules\ModelModule.cs" />
