--- a/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
+++ b/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="BsonMapperTests.cs" />
     <Compile Include="MoveParseClassMapTests.cs" />
     <Compile Include="MovePropertyParserAttributeTests.cs" />
