--- a/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Attributes\AerialJumpScraper.cs" />
     <Compile Include="Attributes\AirAccelerationScraper.cs" />
     <Compile Include="Attributes\AirDecelerationScraper.cs" />
