--- a/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
+++ b/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="DefaultAttributeStrategy.cs" />
     <Compile Include="BaseApiService.cs" />
     <Compile Include="DefaultCharacterAttributeService.cs" />
