--- a/FrannHammer.DataAccess.Contracts/FrannHammer.DataAccess.Contracts.csproj
+++ b/FrannHammer.DataAccess.Contracts/FrannHammer.DataAccess.Contracts.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
