--- a/FrannHammer.DataAccess.MongoDb/FrannHammer.DataAccess.MongoDb.csproj
+++ b/FrannHammer.DataAccess.MongoDb/FrannHammer.DataAccess.MongoDb.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="MongoDbRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
