--- a/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="IAttribute.cs" />
     <Compile Include="ICharacterAttributeRow.cs" />
     <Compile Include="ICharacter.cs" />
