--- a/FrannHammer.Seeder.Tests/FrannHammer.Seeder.Tests.csproj
+++ b/FrannHammer.Seeder.Tests/FrannHammer.Seeder.Tests.csproj
@@ -37,6 +37,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
