--- a/FrannHammer.Seeding.Tests/FrannHammer.Seeding.Tests.csproj
+++ b/FrannHammer.Seeding.Tests/FrannHammer.Seeding.Tests.csproj
@@ -72,6 +72,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="DefaultSeederIntegrationTests.cs" />
     <Compile Include="DefaultSeederTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
