--- a/FrannHammer.Seeding/FrannHammer.Seeding.csproj
+++ b/FrannHammer.Seeding/FrannHammer.Seeding.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DefaultSeeder.cs" />
   </ItemGroup>
