--- a/FrannHammer.Tests.Utility/FrannHammer.Tests.Utility.csproj
+++ b/FrannHammer.Tests.Utility/FrannHammer.Tests.Utility.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="MongoDbInstanceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
