--- a/FrannHammer.WebApi.Specs/FrannHammer.WebApi.Specs.csproj
+++ b/FrannHammer.WebApi.Specs/FrannHammer.WebApi.Specs.csproj
@@ -128,6 +128,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="ApiClient.cs" />
     <Compile Include="Attributes\CharacterAttributesApi.feature.cs">
       <AutoGen>True</AutoGen>
