--- a/FrannHammer.WebApi.Tests/FrannHammer.WebApi.Tests.csproj
+++ b/FrannHammer.WebApi.Tests/FrannHammer.WebApi.Tests.csproj
@@ -120,6 +120,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Controllers\BaseControllerTests.cs" />
     <Compile Include="Controllers\CharacterAttributeControllerTests.cs" />
     <Compile Include="Controllers\CharacterControllerTests.cs" />
