--- a/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
+++ b/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Bayonetta.cs" />
     <Compile Include="Bowser.cs" />
     <Compile Include="BowserJr.cs" />
