--- a/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="AttributeScrapersTests.cs" />
     <Compile Include="DefaultAttributeScrapingServiceIntegrationTests.cs" />
     <Compile Include="DefaultCharacterDataScrapingServiceIntegrationTests.cs" />
