--- a/src/Contracts/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
+++ b/src/Contracts/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IMovementService.cs" />
     <Compile Include="IMoveService.cs" />
     <Compile Include="IReaderService.cs" />
+    <Compile Include="IUniqueDataService.cs" />
     <Compile Include="IWriterService.cs" />
     <Compile Include="ParsedMove.cs" />
     <Compile Include="ParsedMoveAttribute.cs" />
