--- a/src/Implementation/FrannHammer.Domain/FrannHammer.Domain.csproj
+++ b/src/Implementation/FrannHammer.Domain/FrannHammer.Domain.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyParsers\HitboxParser.cs" />
     <Compile Include="PropertyParsers\SetKnockbackParser.cs" />
+    <Compile Include="UniqueData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Contracts\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
