--- a/src/Implementation/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
+++ b/src/Implementation/FrannHammer.WebScraping.Domain/FrannHammer.WebScraping.Domain.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FrannHammer.WebScraping">
+      <HintPath>..\FrannHammer.DefaultContainer.Configuration\bin\Debug\FrannHammer.WebScraping.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
