--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Character\DefaultCharacterMoveScraper.cs" />
     <Compile Include="DefaultWebServices.cs" />
     <Compile Include="EnumExtensions.cs" />
+    <Compile Include="LimitBreakScraper.cs" />
     <Compile Include="Moves\BaseMoveScraper.cs" />
     <Compile Include="Moves\DefaultMoveScrapingServices.cs" />
     <Compile Include="Moves\AerialMoveScraper.cs" />
@@ -92,6 +93,8 @@
     <Compile Include="PageDownloading\DefaultPageDownloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrapingConstants.cs" />
+    <Compile Include="Unique\DefaultUniqueDataProvider.cs" />
+    <Compile Include="Unique\DefaultUniqueDataScrapingServices.cs" />
     <Compile Include="WebClients\DefaultWebClientProvider.cs" />
     <Compile Include="Moves\SpecialMoveScraper.cs" />
   </ItemGroup>
