--- a/src/Tests/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/src/Tests/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DefaultMoveScrapingServiceIntegrationTests.cs" />
     <Compile Include="DefaultWebServicesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniqueDataScrapersTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Contracts\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
