- refactoring config details for public beta stream announcement

--- a/src/Tests/FrannHammer.WebApi.Specs/app.config
+++ b/src/Tests/FrannHammer.WebApi.Specs/app.config
@@ -6,7 +6,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/" />
   </connectionStrings>
-  <appSettings file="..\..\..\..\appsettings.config">
+  <appSettings>
+    <add key="username" value="testuser"/>
+    <add key="password" value="password"/>
     <add key="databaseName" value="integrationtestfranndotexe" />
   </appSettings>
   <runtime>
