--- a/src/Implementation/FrannHammer.Seeder/App.config
+++ b/src/Implementation/FrannHammer.Seeder/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings file="..\..\..\..\appsettings.config">
-    <add key="databaseName" value="integrationtestfranndotexe"/>
+    <add key="databaseName" value="frannhammer_production "/>
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/"/>
+    <add name="DefaultConnection" connectionString="ds151062.mlab.com:51062/"/>
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
