- fixing nuget errors

--- a/src/Contracts/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/src/Contracts/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson, Version=2.4.3.23, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.4.3\lib\net45\MongoDB.Bson.dll</HintPath>
+      <HintPath>..\..\packages\MongoDB.Bson.2.4.3\lib\net45\MongoDB.Bson.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
