- added owin.testing dependency properly

--- a/src/Tests/FrannHammer.WebApi.Specs/packages.config
+++ b/src/Tests/FrannHammer.WebApi.Specs/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Testing" version="3.1.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.3" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net45" />
