- Adjusted WebCharacter.Name values to be the same as the ones used in the current production version of the api. - Added a Categories class for Test Categories - Created tests.appsettings and tests.connectionstrings to consolidate testing creds.  These are referenced by the necessary test projects.

--- a/src/Tests/FrannHammer.Tests.Utility/FrannHammer.Tests.Utility.csproj
+++ b/src/Tests/FrannHammer.Tests.Utility/FrannHammer.Tests.Utility.csproj
@@ -60,6 +60,7 @@
     <Compile Include="..\..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="Categories.cs" />
     <Compile Include="MongoDbInstanceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
