--- a/src/Tests/FrannHammer.WebApi.Tests/App.config
+++ b/src/Tests/FrannHammer.WebApi.Tests/App.config
@@ -4,13 +4,8 @@
     that apply only to the Test project.
 -->
 <configuration>
-    <appSettings>
-
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <connectionStrings configSource="tests.connectionstrings.config" />
+  <appSettings file="tests.appsettings.config" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
