--- a/src/Tests/FrannHammer.WebApi.Specs/app.config
+++ b/src/Tests/FrannHammer.WebApi.Specs/app.config
@@ -3,14 +3,8 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/" />
-  </connectionStrings>
-  <appSettings>
-    <add key="username" value="testuser" />
-    <add key="password" value="password" />
-    <add key="databaseName" value="integrationtestfranndotexe" />
-  </appSettings>
+  <connectionStrings configSource="tests.connectionstrings.config"/>
+  <appSettings file="tests.appsettings.config"/>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
