--- a/src/Tests/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/src/Tests/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -85,6 +85,10 @@
       <Project>{B7686798-61B2-4208-86EF-0076BF1301BE}</Project>
       <Name>FrannHammer.WebScraping</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.Tests.Utility\FrannHammer.Tests.Utility.csproj">
+      <Project>{86AD0285-BE01-4C99-9D3C-84D26A0989F3}</Project>
+      <Name>FrannHammer.Tests.Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
