- added support for shieldsize and run speed to characterattributes

--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Attributes\JumpSquatScraper.cs" />
     <Compile Include="Attributes\LedgeHopScraper.cs" />
     <Compile Include="Attributes\RollScraper.cs" />
+    <Compile Include="Attributes\RunSpeedScraper.cs" />
+    <Compile Include="Attributes\ShieldSizeScraper.cs" />
     <Compile Include="Attributes\ShortHopScraper.cs" />
     <Compile Include="Attributes\SpotdodgeScraper.cs" />
     <Compile Include="Attributes\TractionScraper.cs" />
