- Added support for scraping Reflector data - Fixed a bug with html decoding the '%' symbol in attribute scrapers

--- a/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/src/Implementation/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Attributes\GravityScraper.cs" />
     <Compile Include="Attributes\JumpSquatScraper.cs" />
     <Compile Include="Attributes\LedgeHopScraper.cs" />
+    <Compile Include="Attributes\ReflectorScraper.cs" />
     <Compile Include="Attributes\RollScraper.cs" />
     <Compile Include="Attributes\RunSpeedScraper.cs" />
     <Compile Include="Attributes\ShieldSizeScraper.cs" />
