- fixed an issue where characters with spaces in their names weren't getting a thumbnail picked up

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ ConnectionStringsTest.config
 /FrannHammer.WebApi/appsettings.config.enc
 /.vs
 /src/TestResults
+/src/.vs/FrannHammer.Master/v15/Server/sqlite3
