- adding character classes for currently available ultimate characters on kh site.

--- a/src/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
+++ b/src/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
@@ -8,9 +8,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp2.2\FrannHammer.NetCore.WebApi.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netcoreapp2.2\FrannHammer.NetCore.WebApi.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
