Fixes #271 - Added a service that determines the proper Self link to add based on the response content
Fixes #275
- Added support when seeding data to write it to a local file.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ ConnectionStringsTest.config
 /src/.vs/FrannHammer.Master/v15/Server/sqlite3
 /src/.vs
 /src/FrannHammer.NetCore.WebApi/Properties/PublishProfiles
+/src/FrannHammer.NetCore.WebApi/unique.json
+/src/FrannHammer.NetCore.WebApi/movement.json
+/src/FrannHammer.NetCore.WebApi/move.json
+/src/FrannHammer.NetCore.WebApi/character.json
+/src/FrannHammer.NetCore.WebApi/attribute.json
