Fixes #273 - Now returning a 404 for invalid urls on requests - Renamed the web api tests project to include 'netcore' - Refactored integration testserver support in netcore web api tests project

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ ConnectionStringsTest.config
 /src/FrannHammer.NetCore.WebApi/move.json
 /src/FrannHammer.NetCore.WebApi/character.json
 /src/FrannHammer.NetCore.WebApi/attribute.json
+/src/localstorage
