--- a/src/Implementation/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
+++ b/src/Implementation/FrannHammer.NetCore.WebApi/FrannHammer.NetCore.WebApi.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>cd35493b-3e89-49fc-8d4f-3f48ab7e0d9e</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,10 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Contracts\FrannHammer.Seeding.Contracts\FrannHammer.Seeding.Contracts.csproj" />
-    <ProjectReference Include="..\Implementation\FrannHammer.Api.Services\FrannHammer.Api.Services.csproj" />
-    <ProjectReference Include="..\Implementation\FrannHammer.Domain\FrannHammer.Domain.csproj" />
-    <ProjectReference Include="..\Implementation\FrannHammer.WebScraping.Domain\FrannHammer.WebScraping.Domain.csproj" />
+    <ProjectReference Include="..\..\Contracts\FrannHammer.DataAccess.Contracts\FrannHammer.DataAccess.Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\FrannHammer.Seeding.Contracts\FrannHammer.Seeding.Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\FrannHammer.WebScraping.Contracts\FrannHammer.WebScraping.Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\FrannHammer.WebScraping.Domain.Contracts\FrannHammer.WebScraping.Domain.Contracts.csproj" />
+    <ProjectReference Include="..\FrannHammer.Api.Services\FrannHammer.Api.Services.csproj" />
+    <ProjectReference Include="..\FrannHammer.Utility\FrannHammer.Utility.csproj" />
+    <ProjectReference Include="..\FrannHammer.WebScraping.Domain\FrannHammer.WebScraping.Domain.csproj" />
+    <ProjectReference Include="..\FrannHammer.WebScraping\FrannHammer.WebScraping.csproj" />
   </ItemGroup>
 
 </Project>
