--- a/.gitignore
+++ b/.gitignore
@@ -1,84 +1,3 @@
-KuroganeHammer.Data/packages/
-KuroganeHammer.Web/packages/
-KuroganeHammer.WebScraper/bin/
-KurograneTransferDBTool/KurograneTransferDBTool/bin/
-KurograneTransferDBTool/packages/
-packages/Newtonsoft.Json.8.0.2/lib/
-KurograneTransferDBTool/KurograneTransferDBTool/obj/
-KuroganeHammer.WebScraper/obj/
-KuroganeHammer.Web/KuroganeHammer.Web/obj/
-KuroganeHammer.Data/KuroganeHammer.Data.Api/obj/
-KuroganeHammer.Data/KuroganeHammer.Data.Api/bin/
-KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/obj/
-KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/bin/
-KuroganeHammer.Data.Core/obj/
-KuroganeHammer.Data.Core/bin/
-KuroganeHammer.Web/KuroganeHammer.Web/bin/
-KurograneTransferDBTool/KurograneTransferDBTool/app.config
-KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/App.config
-KuroganeHammer.Data/KuroganeHammer.Data.Api/Web.config
-KuroganeHammer.AccountRegistration/AccountRegistrationTool/obj/
-KuroganeHammer.AccountRegistration/AccountRegistrationTool/bin/
-KuroganeHammer.DataSynchro/ConsoleApplication1/App.config
-KuroganeHammer.DataSynchro/App.config
-KuroganeHammer.DataSynchro/bin/
-KuroganeHammer.DataSynchro/obj/
-KuroganeHammer.Data/KuroganeHammer.Data.Models/obj/
-KuroganeHammer.Data/KuroganeHammer.Data.Models/bin/
-FrannHammer.Api.Tests/obj/
-FrannHammer.AccountRegistration/obj/
-FrannHammer.Api/obj/
-FrannHammer.Core/obj/
-*.force
-FrannHammer.DataSynchro/obj/
-FrannHammer.AccountRegistration/bin/
-FrannHammer.Core.Tests/obj/
-FrannHammer.Core.Tests/bin/
-FrannHammer.Core/bin/
-FrannHammer.WebScraper/bin/
-FrannHammer.DataSynchro/bin/
-KuroganeHammer.TransferDBTool/bin/
-FrannHammer.WebScraper/obj/Release/FrannHammer.WebScraper.csproj.FileListAbsolute.txt
-KuroganeHammer.TransferDBTool/obj/Release/KurograneHammer.TransferDBTool.csproj.FileListAbsolute.txt
-packages/
-FrannHammer.AccountRegistrationTool.Tests/bin/
-FrannHammer.AccountRegistrationTool.Tests/obj/
-FrannHammer.Api.Tests/bin/
-FrannHammer.Api/bin/
-KuroganeHammer.TransferDBTool/obj/Debug/KurograneHammer.TransferDBTool.csproj.FileListAbsolute.txt
-TestResults/FrannHammer.Master.TE.Tests.mdf
-TestResults/FrannHammer.Master.TE.Tests_log.ldf
-FrannHammer.Api/dist/
-FrannHammer.WebScraper/obj/
-KuroganeHammer.TransferDBTool/obj/
-FrannHammer.Api/Web.Debug.config
-FrannHammer.Api/Web.Release.config
-FrannHammer.Api/ConnectionStrings.config
-appsettings.config
-FrannHammer.Models/bin/
-FrannHammer.Models/obj/
-KuroganeHammer.TransferDBTool/ConnectionStrings.config
-FrannHammer.Services.Tests/bin/
-FrannHammer.Api/Scripts/jquery-3.1.0.min.map
-FrannHammer.Api/Scripts/
-FrannHammer.Services/bin/
-FrannHammer.Services/obj/
-FrannHammer.Services.Tests/obj/
-**/*/bin/
-**/*/obj/
-FrannHammer.Api.Data.Tests/ConnectionStringsTest.config
-ConnectionStringsTest.config
-**/buildArtifacts/**/*
-**/tools/**/*
-!/tools/packages.config
-/FakeKhSite/hts-cache
-/FakeKhSite/i.imgur.com
-/FakeKhSite/kuroganehammer.com/Melee
-/FakeKhSite/kuroganehammer.com/Pokken
-/FakeKhSite/kuroganehammer.com/RivalsofAether
-/FakeKhSite
-/TestResults
-/FrannHammer.WebApi/appsettings.config.enc
 /.vs
 ./.vs
 /src/TestResults
@@ -91,3 +10,6 @@ ConnectionStringsTest.config
 /src/FrannHammer.NetCore.WebApi/character.json
 /src/FrannHammer.NetCore.WebApi/attribute.json
 /src/localstorage
+/src/**/bin/*
+/src/**/obj/*
+/**/packages
